src/client/css/puzzles/space_fractions.less
@import '../variables';
@import '../methods';

body {
    background-color: @grey;
}

.space_fractions {
    overflow:hidden;
    margin-bottom: 60px;
    .board {
        border: 1px solid @white;
        float: left;
        width: 620px;
        overflow: hidden;
        background: url(/assets/images/puzzles/space_fractions/space1.jpg) no-repeat center center; 
        background-color: lighten(#000, 10%);
        .square {
            position: relative;
            display: block;
            width: 60px;
            height: 60px;
            line-height: 60px;
            text-align: center;
            border: 1px solid transparent;
            float: left;
            &:hover, &.selected {
                border: 1px solid @white;
            }
            img {
                vertical-align: middle;
            }
            .fraction {
                padding: 6px;
                position: absolute;
                top: 0;
                left: 0;
                background-color: white;
                border: 1px solid #ccc;
                font-weight: bold;
                opacity: 0.9;
                line-height: 1em;
            }   
        }
        
        .laser {
            pointer-events: none;
            position: absolute;
            overflow: hidden;
            &.right {
                margin-left: -3px;
            }
            &.left {
                margin-right: -3px;
            }
            &.up {
                margin-bottom: -3px;
            }
            &.down {
                margin-top: -3px;
            }
            .beam {
                background-color: red;
                box-shadow: 0 0 20px 10px red;
                opacity:0.75;
                &.left, &.right {
                    margin: 20px 0;
                }
                &.up, &.down {
                    margin: 0 20px;
                }
                &.right {
                    border-top-left-radius: 40%;
                    border-bottom-left-radius: 40%;
                    margin-left: 2px;
                }
                &.left {
                    border-top-right-radius: 40%;
                    border-bottom-right-radius: 40%;
                    margin-right: 2px;
                }
                &.up {
                    border-bottom-left-radius: 40%;
                    border-bottom-right-radius: 40%;
                    margin-bottom: 2px;
                }
                &.down {
                    border-top-left-radius: 40%;
                    border-top-right-radius: 40%;
                    margin-top: 2px;
                }
            }
        }
    }
    
    .element_selector {
        .rounded(6px);
        position: absolute;
        top: -1000px;
        left: -100px;
        opacity: 0;
        width: 320px;
        height: 300px;
        background-color: @white;
        border: 1px solid #ccc;
        overflow: auto;
        text-align: center;
        h3 { 
            padding-top: 12px;
        }
        .object {
            cursor: pointer;
            width: 65px;
            height: 65px;
            line-height: 65px;
            text-align: center;
            border: 1px solid #ccc;
            margin: 6px 0 0 6px;
            float: left;
            img {
                vertical-align: middle;
            }
        }
        
        .fraction_selector {
            padding: 12px;
            text-align: center;
            input, .solidus, button {
                width: 3em;
                font-size: 14pt;
            }
            .numerator {
                text-align: right;
            }
        }
    }
}

